# awesome-psnstats

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: generate.py  library.csv  preferences.json  report.md
src/psnstats/: __init__.py  analysis.py  cli.py  compare.py  fetch.py  report.py  writers.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_compare.py  test_fetch.py  test_report.py  test_writers.py
