[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-psnstats"
dynamic = ["version"]
description = "Export your PlayStation Network play history to CSV/JSON and build an AI-ready taste profile, entirely on your machine."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "t3chnaztea" }]
keywords = [
    "playstation",
    "psn",
    "ps5",
    "ps4",
    "cli",
    "csv-export",
    "trophies",
    "game-recommendations",
    "llm-tools",
    "quantified-self",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
]
dependencies = ["psnawp>=3.0,<4"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/t3chnaztea/awesome-psnstats"
Repository = "https://github.com/t3chnaztea/awesome-psnstats"
Issues = "https://github.com/t3chnaztea/awesome-psnstats/issues"
Changelog = "https://github.com/t3chnaztea/awesome-psnstats/blob/main/CHANGELOG.md"

[project.scripts]
psnstats = "psnstats.cli:main"

[tool.hatch.version]
path = "src/psnstats/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/psnstats"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
